src/test/ui/union/union-custom-drop.stderr
error[E0740]: unions cannot contain fields that may need dropping
  --> $DIR/union-custom-drop.rs:7:5
   |
LL |     bar: Bar,
   |     ^^^^^^^^
   |
   = note: a type is guaranteed not to need dropping when it implements `Copy`, or when it is the special `ManuallyDrop<_>` type
help: when the type does not implement `Copy`, wrap it inside a `ManuallyDrop<_>` and ensure it is manually dropped
   |
LL |     bar: std::mem::ManuallyDrop<Bar>,
   |          +++++++++++++++++++++++   +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0740`.
